--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/about"
         android:title="@string/about" />
+    <item android:id="@+id/openSource"
+        android:title="@string/openSource" />
     <item android:id="@+id/licences"
         android:title="@string/licences" />
     <item android:id="@+id/changeEndpointURL"
