--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/about"
         android:title="@string/about" />
+    <item android:id="@+id/openSource"
+        android:title="@string/openSource" />
     <item android:id="@+id/licences"
         android:title="@string/licences" />
     <item android:id="@+id/changeEndpointURL"
